feat (daemon): collect real node info
